[tool.poetry]
name = "pttest"
version = "0.1.0"
description = ""
authors = ["Adilet Abiraev <aabiraev@quantumbrains.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psutil = "^5.9.8"
loguru = "^0.7.2"
aiohttp = "^3.9.3"
uvloop = "^0.19.0"
tqdm = "^4.66.2"
jsf = "^0.10.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
